kitten/reported_bugs/rust/rust-86053-2/stderr.txt
error: only foreign or `unsafe extern "C" functions may be C-variadic

 --> mutant.rs:4:56

  |

4 | fn use_ < 'short , 'long > ( c : Invariant < 'long > , ... ) {

  |                                                        ^^^^



error[E0658]: C-variadic functions are unstable

 --> mutant.rs:4:1

  |

4 | / fn use_ < 'short , 'long > ( c : Invariant < 'long > , ... ) {

5 | | let _ : Invariant < 'short > = c ;

6 | | }

  | |_^

  |

  = note: see issue #44930 <https://github.com/rust-lang/rust/issues/44930> for more information

  = help: add `#![feature(c_variadic)]` to the crate attributes to enable



error[E0308]: mismatched types

 --> mutant.rs:5:32

  |

5 | let _ : Invariant < 'short > = c ;

  |                                ^ lifetime mismatch

  |

  = note: expected struct `Invariant<'short>`

             found struct `Invariant<'long>`

note: the lifetime `'long` as defined on the function body at 4:20...

 --> mutant.rs:4:20

  |

4 | fn use_ < 'short , 'long > ( c : Invariant < 'long > , ... ) {

  |                    ^^^^^

note: ...does not necessarily outlive the lifetime `'short` as defined on the function body at 4:11

 --> mutant.rs:4:11

  |

4 | fn use_ < 'short , 'long > ( c : Invariant < 'long > , ... ) {

  |           ^^^^^^



thread 'rustc' panicked at 'index out of bounds: the len is 1 but the index is 1', compiler/rustc_infer/src/infer/error_reporting/nice_region_error/util.rs:61:22

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



error: internal compiler error: unexpected panic



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.54.0-nightly (0a8629bff 2021-06-11) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [typeck] type-checking `use_`

#1 [typeck_item_bodies] type-checking all item bodies

end of query stack

error: aborting due to 3 previous errors



Some errors have detailed explanations: E0308, E0658.

For more information about an error, try `rustc --explain E0308`.

